<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
    <EditText
        android:id="@+id/offerIdTxt"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/offer_id"
        android:inputType="text"
         />

    <EditText
        android:id="@+id/discountTxt"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/discount_percentage"
        android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
    <EditText
        android:id="@+id/minDiscountTxt"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/min_discount"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/maxDiscountTxt"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/max_discount"
        android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
    <EditText
        android:id="@+id/minWeightTxt"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/min_weight"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/maxWeightTxt"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/max_weight"
        android:inputType="numberDecimal"/>
    </LinearLayout>

</LinearLayout>