<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/totalVehicleTxt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/total_vehicle"
            android:inputType="number"/>

        <EditText
            android:id="@+id/maxSpeedTxt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/max_speed"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <EditText
        android:id="@+id/maxLoadTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/max_load_capacity"/>

</LinearLayout>