<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CourierServiceActivity"
    >
    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="wrap_content"
        android:weightSum="2"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addingBtn"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/add_package"
            android:textSize="15sp" />

        <Button
            android:id="@+id/addOfferBtn"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/add_offer"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btnLayout1"
        android:layout_width="wrap_content"
        android:weightSum="2"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnLayout"
        app:layout_constraintTop_toBottomOf="@+id/btnLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deliveryCostBtn"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/delivery_cost"
            android:textSize="15sp" />

        <Button
            android:id="@+id/deliveryTimeBtn"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/delivery_time"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btnLayout1"
            app:layout_constraintTop_toBottomOf="@+id/btnLayout1" />

</androidx.constraintlayout.widget.ConstraintLayout>